--- a/src/main/resources/message.yml
+++ b/src/main/resources/message.yml
@@ -1,19 +1,19 @@
 # Сообщения которые будет выводиться людям при вводе команды и при наличии админ-прав
 msg:
-  message: "%prefix% &fУ вас обнаружены админ-права. Вы должны ввести админ-пароль!"
-  incorrect: "%prefix% &cВведенный тобой пароль неверен!"
-  correct: "%prefix% &aПароль верный. Добро пожаловать на сервер."
-  noneed: "%prefix% &fВам не нужно вводить админ-пароль или он уже был введен."
-  cantbenull: "%prefix% &fПас не может быть пустым."
-  playeronly: "%prefix% &fТолько для игроков"
+  message: "&fУ вас обнаружены админ-права. Вы должны ввести админ-пароль!"
+  incorrect: "&cВведенный тобой пароль неверен!"
+  correct: "&aПароль верный. Добро пожаловать на сервер."
+  noneed: "&fВам не нужно вводить админ-пароль или он уже был введен."
+  cantbenull: "&fПас не может быть пустым."
+  playeronly: "&fТолько для игроков"
 
 # Оповещения для консоли и администраторов сервера
 broadcasts:
-  failed: "%prefix% &fАдминистратор &3%player% &fввел админ-пас &cнеудачно! &fIP адрес: &c%ip%"
-  passed: "%prefix% &fАдминистратор &3%player% &fввел админ-пас &aуспешно! &fIP адрес: &c%ip%"
-  joined: "%prefix% &fАдминистратор &3%player% &fвошел в игру. &fIP адрес: &c%ip%"
-  captured: "%prefix% &fИгрок &3%player% &fбыл пойман с админ-правами! &fIP адрес: &c%ip%"
-  disabled: "%prefix% &6&lВнимание! &fПлагин был отключен!"
+  failed: "&fАдминистратор &3%player% &fввел админ-пас &cнеудачно! &fIP адрес: &c%ip%"
+  passed: "&fАдминистратор &3%player% &fввел админ-пас &aуспешно! &fIP адрес: &c%ip%"
+  joined: "&fАдминистратор &3%player% &fвошел в игру. &fIP адрес: &c%ip%"
+  captured: "&fИгрок &3%player% &fбыл пойман с админ-правами! &fIP адрес: &c%ip%"
+  disabled: "&6&lВнимание! &fПлагин был отключен!"
 
 # Как сообщения будут отображаться в логах
 log-format:
