more things and return legacy

--- a/src/main/resources/message.yml
+++ b/src/main/resources/message.yml
@@ -1,41 +1,35 @@
-# Сообщения которые будет выводиться людям при вводе команды и при наличии админ-прав
 msg:
-  message: "&fУ вас обнаружены админ-права. Вы должны ввести админ-пароль!"
-  incorrect: "&cВведенный тобой пароль неверен!"
-  correct: "&aПароль верный. Добро пожаловать на сервер."
-  noneed: "&fВам не нужно вводить админ-пароль или он уже был введен."
-  cantbenull: "&fПас не может быть пустым."
+  message: "&fОбнаружены права администратора! Вы должны ввести ваш пароль!"
+  incorrect: "&cНеверный пароль!"
+  correct: "&aВы успешно ввели специальный пароль. Хорошего дня!"
+  noneed: "&fВам не нужно вводить специальный пароль, либо он уже введен"
+  cantbenull: "&fПароль не должен быть пустым!"
   playeronly: "&fТолько для игроков"
 
-# Оповещения для консоли и администраторов сервера
 broadcasts:
-  failed: "&fАдминистратор &3%player% &fввел админ-пас &cнеудачно! &fIP адрес: &c%ip%"
-  passed: "&fАдминистратор &3%player% &fввел админ-пас &aуспешно! &fIP адрес: &c%ip%"
-  joined: "&fАдминистратор &3%player% &fвошел в игру. &fIP адрес: &c%ip%"
-  captured: "&fИгрок &3%player% &fбыл пойман с админ-правами! &fIP адрес: &c%ip%"
-  disabled: "&6&lВнимание! &fПлагин был отключен!"
+  failed: "&fАдминистратор &6%player% &fввел пароль &cнеправильно!"
+  passed: "&fАдминистратор &6%player% &fввел пароль &aправильно!"
+  joined: "&fАдминистратор &6%player% &fприсоединился к игре!"
+  captured: "&fУ игрока &6%player% &fобнаружены права администратора!"
+  disabled: "&6&lВНИМАНИЕ! &fЗащита администратора была отключена!"
 
-# Как сообщения будут отображаться в логах
 log-format:
   enabled: "%date% [UltimateServerProtector - плагин включён]"
   disabled: "%date% [UltimateServerProtector - плагин выключён]"
-  failed: "%date% Администратор %player% ввел админ-пас неудачно! IP адрес: %ip%"
-  passed: "%date% Администратор %player% ввел админ-пас успешно! IP адрес: %ip%"
-  joined: "%date% Администратор %player% вошел в игру. IP адрес: %ip%"
-  captured: "%date% Игрок %player% был пойман с админ-правами! IP адрес: %ip%"
-  command: "%date% Плагин исполнил команду: %cmd%"
+  failed: "%date% Администратор %player% ввел пароль неправильно!"
+  passed: "%date% Администратор %player% успешно авторизовался!"
+  joined: "%date% Администратор %player% присоединился к игре!"
+  captured: "%date% У игрока %player% обнаружены права администратора!"
+  command: "%date% Игрок написал: %cmd%"
 
-# Сообщения которые будут высвечиваться на экране
 titles:
-  message: "&e&l⚠ &c&lЗащита &e&l⚠;&fОбнаружены админ-права! Вводи админ-пароль!;10;60;15"
-  incorrect: "&e&l⚠ &c&lЗащита &e&l⚠;&cПароль неверен!;10;60;15"
-  correct: "&e&l⚠ &c&lЗащита &e&l⚠;&aПароль верный. Добро пожаловать.;10;60;15"
+  message: "&e&l⚠ &c&lЗащита Администратора &e&l⚠;&fОбнаружены права администратора, вы должны ввести пароль!"
+  incorrect: "&e&l⚠ &c&lЗащита Администратора &e&l⚠;&cНеправильный пароль!"
+  correct: "&e&l⚠ &c&lЗащита Администратора &e&l⚠;&aПравильный пароль!"
 
-# Сообщение в босс-баре
 bossbar:
-  message: "&fОсталось: &c%time% секунд"
+  message: "&fСекунд осталось: &c%time%"
 
-# Сообщение при вводе команды /usp (админ-команд)
 uspmsg:
   playeronly: "&cДанная команда может быть исполнена только игроком!"
   logout: "&aВаша сессия была сброшена"
@@ -52,8 +46,3 @@ uspmsg:
   usage-reload: "&6/%cmd% reload&7 - перезагрузить конфиг"
   usage-setpass: "&6/%cmd% setpass (ник) (пароль) &7- установить пароль игроку"
   usage-rempass: "&6/%cmd% rempass (ник) &7- удалить пароль игроку"
-
-# Системные сообщения
-system:
-  baseline-warn: "§6============= §c! ВНИМАНИЕ ! §c============="
-  baseline-default: "§6========================================"
