--- a/src/main/resources/data.yml
+++ b/src/main/resources/data.yml
@@ -1,6 +1,3 @@
-# Уникальные пароли для игроков
 data:
-  OverwriteMC: # игрок 1
-    pass: '123123' # админ-пасс игрока 1
-  test99999: # игрок 2
-    pass: '321321' # админ-пасс игрока 2
+  OverwriteMC:
+    pass: "123123"
