remove deprecated stuff

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,3 @@
-#
-#▀██▀  ▀█▀ ▀██    ▄    ██                       ▄            ▄█▀▀▀▄█                                           ▀██▀▀█▄                    ▄                     ▄
-# ██    █   ██  ▄██▄  ▄▄▄  ▄▄ ▄▄ ▄▄    ▄▄▄▄   ▄██▄    ▄▄▄▄   ██▄▄  ▀    ▄▄▄▄  ▄▄▄ ▄▄  ▄▄▄▄ ▄▄▄   ▄▄▄▄  ▄▄▄ ▄▄   ██   ██ ▄▄▄ ▄▄    ▄▄▄   ▄██▄    ▄▄▄▄    ▄▄▄▄  ▄██▄    ▄▄▄   ▄▄▄ ▄▄
-# ██    █   ██   ██    ██   ██ ██ ██  ▀▀ ▄██   ██   ▄█▄▄▄██   ▀▀███▄  ▄█▄▄▄██  ██▀ ▀▀  ▀█▄  █  ▄█▄▄▄██  ██▀ ▀▀  ██▄▄▄█▀  ██▀ ▀▀ ▄█  ▀█▄  ██   ▄█▄▄▄██ ▄█   ▀▀  ██   ▄█  ▀█▄  ██▀ ▀▀
-# ██    █   ██   ██    ██   ██ ██ ██  ▄█▀ ██   ██   ██      ▄     ▀██ ██       ██       ▀█▄█   ██       ██      ██       ██     ██   ██  ██   ██      ██       ██   ██   ██  ██
-#  ▀█▄▄▀   ▄██▄  ▀█▄▀ ▄██▄ ▄██ ██ ██▄ ▀█▄▄▀█▀  ▀█▄▀  ▀█▄▄▄▀ █▀▄▄▄▄█▀   ▀█▄▄▄▀ ▄██▄       ▀█     ▀█▄▄▄▀ ▄██▄    ▄██▄     ▄██▄     ▀█▄▄█▀  ▀█▄▀  ▀█▄▄▄▀  ▀█▄▄▄▀  ▀█▄▀  ▀█▄▄█▀ ▄██▄
-#
-
 blocking-settings:
   block-inventory-open: false
   hide-on-entering: true
@@ -58,5 +50,4 @@ permissions:
   - "serverprotector.admin"
 
 excluded-players:
-  - test99999
-  - test123123
+  - PadowYT2
